# deeptrace

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
deeptrace/: cli.py  utils.py
deeptrace/commands/: analyze.py  compare.py
deeptrace/core/: analyzer.py  models.py  registry.py
deeptrace/core/parsers/: allure.py  har_generic.py  json_generic.py  parser_manager.py
examples/: broken.json  playwright_actions.json  playwright_array.json  playwright_events.json  playwright_no_end.json  playwright_small.json  playwright_steps.json  selenium_actions.json  selenium_array.json  selenium_entries.json  selenium_events.json  selenium_har.har
slowpoke_finder/: analyzer.py  cli.py  models.py  registry.py  utils.py
slowpoke_finder/ab_reporting/: __init__.py  html_report_logic.py
slowpoke_finder/ab_reporting/assets/: style.css
slowpoke_finder/ab_reporting/templates/: index.html.j2
slowpoke_finder/parsers/: allure.py  playwright.py  selenium.py
slowpoke_finder/tests/: test_play_parser.py  test_selenium_parser.py
tests/: test_play_parser.py  test_selenium_parser.py
