[tool.poetry]
name = "slowpoke-finder"
version = "0.1.2"
description = "Library for analyzing slow steps in Playwright, Selenium and Allure logs"
authors = ["Anastasia Litvinenko"]
license = "MIT"
readme = "README.md"
packages = [{ include = "slowpoke_finder" }]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.4"
click = "8.1.7"
tabulate = "^0.9.0"

[tool.poetry.scripts]
slowpoke-finder = "slowpoke_finder.cli:app"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pytest = "^8.3.5"
types-tabulate = "^0.9.0.20241207"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
