[tool.poetry]
name        = "slowpoke-finder"
version     = "0.2.0"
description = "CLI & library for analysing slow steps in Playwright, Selenium and Allure logs"
authors     = ["Anastasia Litvinenko"]
license     = "MIT"
readme      = "README.md"
packages    = [{ include = "slowpoke_finder" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

typer  = "^0.15.4"

jinja2 = ">=3.1,<4"

plotly               = { version = ">=5.0", optional = true }
importlib-resources  = { version = ">=6.0", python = "<3.9", optional = true }

[tool.poetry.extras]
report = ["plotly", "importlib-resources"]

[tool.poetry.group.dev.dependencies]
pre-commit      = "^4.2"
pytest          = "^8.0"
ruff            = "^0.4"
black           = "^24.4"
mypy            = "^1.10"
types-tabulate  = "^0.9.0.20241207"
types-jinja2    = "^2.11.9"   # stub package; ok if absent on PyPI for some envs

[tool.poetry.scripts]
slowpoke-finder = "slowpoke_finder.cli:app"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
pretty = true
